# SDL_VPN

./: .env.example  .gitignore  ARCHITECTURE.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
apps/desktop-client/: package-lock.json  package.json  wrangler.toml
apps/desktop-client/src/: App.tsx  index.css
apps/desktop-client/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop-client/src-tauri/src/: main.rs
crates/core-protocol/: Cargo.toml
crates/core-protocol/src/: error.rs  lib.rs  models.rs  proxy.rs  subscription.rs
crates/daemon/: Cargo.toml
crates/daemon/src/: main.rs
crates/gateway/: Cargo.toml
crates/gateway/src/: main.rs
