[package]
name = "core-protocol"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.8", features = ["serde", "v4"] }
ed25519-dalek = { version = "2.1", features = ["serde", "rand_core"] }
rand = "0.8"
tracing = "0.1"
bincode = "1.3"