[package]
name = "daemon"
version = "0.1.0"
edition = "2021"

[dependencies]
core-protocol = { path = "../core-protocol" }
tokio = { version = "1.38", features = ["full"] }
uuid = { version = "1.8", features = ["serde", "v4"] }
backoff = { version = "0.4", features = ["tokio"] }
tracing = "0.1"
tracing-subscriber = "0.3"
ed25519-dalek = "2.1"
rand = "0.8"
tokio-tungstenite = "0.21"
futures-util = "0.3"
bincode = "1.3"
serde_json = "1.0"