[package]
name = "gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
core-protocol = { path = "../core-protocol" }
tokio = { version = "1.38", features = ["full"] }
uuid = { version = "1.8", features = ["serde", "v4"] }
dashmap = "5.5"
tracing = "0.1"
tracing-subscriber = "0.3"
tokio-tungstenite = "0.21"
futures-util = "0.3"
bincode = "1.3"