[package]
name = "nexusvpn-desktop"
version = "0.1.0"
description = "NexusVPN Desktop Client"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = ["system-tray"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
daemon = { path = "../../../crates/daemon" }
core-protocol = { path = "../../../crates/core-protocol" }
tokio = { version = "1.38", features = ["full"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
